--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "file-saver": "^2.0.5",
     "multer": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
